Pagination buttons on ios fixed

--- a/source/sass/blocks/custom-swiper.scss
+++ b/source/sass/blocks/custom-swiper.scss
@@ -50,6 +50,7 @@
   bottom: 5px;
   width: 22px;
   height: 22px;
+  padding: 0;
   background-color: $color-transparent;
   border: none;
   z-index: 10;
@@ -68,6 +69,7 @@
     @include vp-767 {
       top: 22px;
       bottom: auto;
+      display: block;
     }
   }
 
